@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Added the ability to dump a specific calculation
   * Changed the signature of the extract command to `oq extract what calc_id`,
     where `what` is a path info plus query string;
 
